Spacing and size issue resolved
Adjusted the size and spacing of some things to have the site appear more complete

--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -1,6 +1,6 @@
 .main {
     width: 100vw;
-    height: 100vh;
+    height: 140vh;
     display: flex;
     justify-content: center;
 }
