--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -43,7 +43,7 @@ li {
 }
 
 .tableAlign {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
