--- a/src/components/Dorm.css
+++ b/src/components/Dorm.css
@@ -23,7 +23,8 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 90%;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 th {
@@ -69,7 +70,7 @@ tr:nth-child(even) {
 }
 
 .tableAlign {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
